sinalcabo/force-app/main/default/objects/ServiceAppointment/fields/Celula_Codigo__c.field-meta.xml
<CustomField>
    <fullName>Celula_Codigo__c</fullName>
    <description>Código da célula da ordem, para aparecer na consola de despacho e na aplicação móvel sem abrir a ordem.</description>
    <formula>Ordem__r.Celula__r.Codigo__c</formula>
    <inlineHelpText>É calculado a partir da ordem. Muda quando a célula da ordem mudar.</inlineHelpText>
    <label>Célula</label>
    <type>Text</type>
</CustomField>