sinalcabo/force-app/main/default/objects/ServiceAppointment/fields/Coordenada__c.field-meta.xml
<CustomField>
    <fullName>Coordenada__c</fullName>
    <description>Latitude e longitude da marcação em texto, para poderem ser mostradas na página.</description>
    <formula>IF(OR(ISBLANK(Latitude), ISBLANK(Longitude)), &quot;&quot;, TEXT(Latitude) &amp; &quot;, &quot; &amp; TEXT(Longitude))</formula>
    <inlineHelpText>Vem da ordem, escrita pelo flow SC FS Ordem propagar coordenadas. É actualizada quando a célula da ordem é corrigida, enquanto a marcação não estiver concluída.</inlineHelpText>
    <label>Coordenada</label>
    <type>Text</type>
</CustomField>