sinalcabo/force-app/main/default/objects/ServiceAppointment/fields/Estado_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Estado_Cliente__c</fullName>
    <description>Estado da tarefa do lado da NOS, espelhado na marcação e traduzido para português.</description>
    <formula>CASE(TEXT(Ordem__r.Estado_Cliente__c), &quot;ASSIGNED_TO_COMPANY&quot;, &quot;Atribuída à empresa&quot;, &quot;ASSIGNED_TO_USER&quot;, &quot;Atribuída ao técnico&quot;, &quot;WORK_IN_PROGRESS&quot;, &quot;Em execução&quot;, &quot;PENDING&quot;, &quot;Pendente&quot;, &quot;RESOLVED&quot;, &quot;Resolvida&quot;, &quot;CLOSED&quot;, &quot;Fechada&quot;, TEXT(Ordem__r.Estado_Cliente__c))</formula>
    <inlineHelpText>É calculado a partir da ordem. Um valor novo da NOS aparece aqui tal como vem, em maiúsculas.</inlineHelpText>
    <label>Estado no NetGuard</label>
    <type>Text</type>
</CustomField>