sinalcabo/force-app/main/default/objects/ServiceAppointment/fields/Ordem__c.field-meta.xml
<CustomField>
    <fullName>Ordem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ligação directa à ordem de trabalho. Existe porque o campo padrão que liga a marcação ao pai aceita vários tipos de registo e não pode ser usado em fórmulas.</description>
    <inlineHelpText>Preenchido pela integração ao criar a marcação. Não o alteres à mão.</inlineHelpText>
    <label>Ordem de trabalho</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Marcações (espelho)</relationshipLabel>
    <relationshipName>Marcacoes_Espelho</relationshipName>
    <type>Lookup</type>
</CustomField>