sinalcabo/force-app/main/default/objects/ServiceAppointment/fields/Resumo_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Resumo_Cliente__c</fullName>
    <description>Primeiros 80 caracteres do resumo que a NOS enviou, para caber na consola e no cartão da marcação.</description>
    <formula>LEFT(Ordem__r.Subject, 80)</formula>
    <inlineHelpText>O texto completo está na ordem de trabalho.</inlineHelpText>
    <label>Resumo da NOS</label>
    <type>Text</type>
</CustomField>