sinalcabo/force-app/main/default/objects/ServiceAppointment/fields/Sinal_Classificacao__c.field-meta.xml
<CustomField>
    <fullName>Sinal_Classificacao__c</fullName>
    <description>Semáforo de classificação da ordem, espelhado na marcação.</description>
    <formula>Ordem__r.Sinal_Classificacao__c</formula>
    <inlineHelpText>Uma marcação com divergência ou por classificar não deve ser despachada sem alguém confirmar a célula.</inlineHelpText>
    <label>Sinal</label>
    <type>Text</type>
</CustomField>