sinalcabo/force-app/main/default/objects/ServiceAppointment/fields/Tecnologia__c.field-meta.xml
<CustomField>
    <fullName>Tecnologia__c</fullName>
    <description>Tecnologia de rede da ordem, espelhada na marcação.</description>
    <formula>TEXT(Ordem__r.Tecnologia__c)</formula>
    <inlineHelpText>É calculada a partir da ordem.</inlineHelpText>
    <label>Tecnologia</label>
    <type>Text</type>
</CustomField>