sinalcabo/force-app/main/default/objects/ServiceAppointment/listViews/All_ServiceAppointments.listView-meta.xml
<ListView>
    <fullName>All_ServiceAppointments</fullName>
    <columns>Sinal_Classificacao__c</columns>
    <columns>Ordem__c</columns>
    <columns>Celula_Codigo__c</columns>
    <columns>Resumo_Cliente__c</columns>
    <columns>Status</columns>
    <columns>SchedStartTime</columns>
    <columns>SchedEndTime</columns>
    <columns>ServiceTerritory</columns>
    <columns>Estado_Cliente__c</columns>
    <columns>EarliestStartTime</columns>
    <filterScope>Everything</filterScope>
    <label>Todas as marcações</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>