sinalcabo/force-app/main/default/objects/ServiceAppointment/listViews/Hoje.listView-meta.xml
<ListView>
    <fullName>Hoje</fullName>
    <columns>Sinal_Classificacao__c</columns>
    <columns>Ordem__c</columns>
    <columns>Celula_Codigo__c</columns>
    <columns>Resumo_Cliente__c</columns>
    <columns>Status</columns>
    <columns>SchedStartTime</columns>
    <columns>SchedEndTime</columns>
    <columns>ServiceTerritory</columns>
    <columns>Estado_Cliente__c</columns>
    <columns>EarliestStartTime</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SchedStartTime</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Hoje</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>